RESOLVED FIXED 241778
imported/w3c/web-platform-tests/css/css-contain/container-queries/svg-foreignobject-no-size-container.html hits a debug assert
https://bugs.webkit.org/show_bug.cgi?id=241778
Summary imported/w3c/web-platform-tests/css/css-contain/container-queries/svg-foreign...
Antti Koivisto
Reported 2022-06-20 02:10:08 PDT
ASSERTION FAILED: !view().frameView().layoutContext().isPaintOffsetCacheEnabled() rendering/svg/RenderSVGForeignObject.cpp(125) : virtual void WebCore::RenderSVGForeignObject::layout() 1 0x12c2ad360 WTFCrash 2 0x14a0375b4 WebCore::JSANGLEInstancedArrays::createPrototype(JSC::VM&, WebCore::JSDOMGlobalObject&) 3 0x14eb35e30 WebCore::RenderSVGForeignObject::layout() 4 0x14dde775c WebCore::FrameViewLayoutContext::performLayout() 5 0x14dde7090 WebCore::FrameViewLayoutContext::layout() 6 0x14dd80e7c WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive() 7 0x14de30a78 WebCore::Page::layoutIfNeeded() 8 0x14de312bc WebCore::Page::updateRendering() 9 0x11923582c WebKit::WebPage::updateRendering() 10 0x11837442c WebKit::TiledCoreAnimationDrawingArea::updateRendering(WebKit::TiledCoreAnimationDrawingArea::UpdateRenderingType) 11 0x118374384 WebKit::TiledCoreAnimationDrawingArea::forceRepaint() 12 0x119234584 WebKit::WebPage::forceRepaintWithoutCallback() 13 0x118ce4eb4 WKBundlePageForceRepaint
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-27 02:11:13 PDT
Chirag M Shah
Comment 2 2023-01-25 21:09:08 PST
Chirag M Shah
Comment 3 2023-01-25 21:24:09 PST
EWS
Comment 4 2023-02-01 08:33:07 PST
Committed 259685@main (e80607696660): <https://commits.webkit.org/259685@main> Reviewed commits have been landed. Closing PR #9170 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.