Cherry-pick 259685@main (e80607696660). https://bugs.webkit.org/show_bug.cgi?id=241778

Don't create renderer for foreignElement when it has no parent
    https://bugs.webkit.org/show_bug.cgi?id=241778
    rdar://102916021

    Reviewed by Nikolas Zimmermann.

    If the body is replaced by foreignElement, it results in a DOM which
    doesn't have anything to render or layout, but it crashes WebKit because
    we trip over an assert because isPaintOffsetCacheEnabled is not disabled
    (which happens only when there is a SVGRoot). This change makes it so
    that we don't generate the useless renderer in the first place, which is
    what happens with other SVGElements.

    * LayoutTests/svg/foreignObject/foreign-object-without-svgroot-crash-expected.txt: Added.
    * LayoutTests/svg/foreignObject/foreign-object-without-svgroot-crash.html: Added.
    * Source/WebCore/svg/SVGForeignObjectElement.cpp:
    (WebCore::SVGForeignObjectElement::rendererIsNeeded):

    Canonical link: https://commits.webkit.org/259685@main